[gd_scene load_steps=20 format=3 uid="uid://brly0pgoi8fy0"]

[ext_resource type="Texture2D" uid="uid://b43tiaa6bcftw" path="res://assets/Tilelists/rectangle_red_flag (1).jpg" id="1_uls13"]
[ext_resource type="Script" path="res://main.gd" id="1_uxwrx"]
[ext_resource type="Texture2D" uid="uid://cup7ytx086pwk" path="res://actualImages/Untitled_Artwork 2 (2).png" id="3_xdcam"]
[ext_resource type="StyleBox" uid="uid://bw7qctq1ieulf" path="res://test.tres" id="4_6lfeq"]
[ext_resource type="Texture2D" uid="uid://t81nxoi3h506" path="res://assets/Untitled_Artwork (1).png" id="4_euncq"]
[ext_resource type="Texture2D" uid="uid://y0pqgpuedg5" path="res://actualImages/Untitled_Artwork 3.png" id="4_v4msv"]
[ext_resource type="Texture2D" uid="uid://dlr81rl46ng8u" path="res://assets/pixil-frame-0 (11).png" id="5_mcsa3"]
[ext_resource type="PackedScene" uid="uid://c6o7a2rnidocp" path="res://console.tscn" id="6_t2toq"]
[ext_resource type="FontFile" uid="uid://ce5cdq13xtfrh" path="res://actualImages/dogicapixelbold.otf" id="6_vr6j3"]
[ext_resource type="AudioStream" uid="uid://bae7rg3u5t8v8" path="res://actualImages/distant-explosion-47562.mp3" id="9_5ujvk"]
[ext_resource type="Texture2D" uid="uid://dv1v1rwh6mx32" path="res://button.png" id="10_u327o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n7y4"]
bg_color = Color(0.458981, 0.660521, 0.458815, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikete"]
bg_color = Color(0.343237, 0.686795, 0.429871, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uh6xn"]
bg_color = Color(0.396028, 0.667396, 0.534251, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktp8l"]
bg_color = Color(0.274468, 0.542517, 0.266512, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whtd2"]
bg_color = Color(0.70631, 0.296146, 0.259656, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_goikk"]
texture = ExtResource("3_xdcam")
texture_region_size = Vector2i(166, 111)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ev6rp"]
texture = ExtResource("4_v4msv")
texture_region_size = Vector2i(166, 111)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_o8gfa"]
tile_size = Vector2i(166, 111)
sources/2 = SubResource("TileSetAtlasSource_goikk")
sources/3 = SubResource("TileSetAtlasSource_ev6rp")

[node name="Main" type="Node2D"]
script = ExtResource("1_uxwrx")

[node name="bg4" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.547576, 0.580968, 0.352941)
self_modulate = Color(0.827977, 0.658564, 0.677227, 0.305882)
position = Vector2(960, 632)
scale = Vector2(2.08, 1.568)
texture = ExtResource("1_uls13")

[node name="bg3" type="Sprite2D" parent="."]
visible = false
modulate = Color(2.31028e-06, 0.524951, 0.715699, 0.560784)
position = Vector2(384.5, 80.25)
scale = Vector2(0.45875, 0.127)
texture = ExtResource("1_uls13")

[node name="AddCamp" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 1524.0
offset_top = 30.0
offset_right = 1818.0
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("6_vr6j3")
theme_override_styles/normal = SubResource("StyleBoxFlat_5n7y4")
theme_override_styles/hover = SubResource("StyleBoxFlat_ikete")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ikete")
text = "Survivor Camp (10)"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 260.0
offset_top = 69.0
offset_right = 628.0
offset_bottom = 133.0
tooltip_text = "How much of your cure is done!!

- camps closer to zombies progress cure faster"
mouse_default_cursor_shape = 1
theme_type_variation = &"024"
theme_override_styles/background = SubResource("StyleBoxFlat_uh6xn")
theme_override_styles/fill = SubResource("StyleBoxFlat_ktp8l")
step = 0.5

[node name="MissileButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -119.0
offset_right = 230.0
offset_bottom = 172.0
theme_override_fonts/font = ExtResource("6_vr6j3")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = ExtResource("4_6lfeq")
theme_override_styles/hover = SubResource("StyleBoxFlat_whtd2")
text = "Launch Missiles"

[node name="MissileLauncher" type="Marker2D" parent="."]

[node name="Pixil-frame-0(11)" type="Sprite2D" parent="."]
visible = false
z_index = -15
position = Vector2(976, 544)
scale = Vector2(8.12343, 8.03542)
texture = ExtResource("5_mcsa3")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 765.0
offset_top = 72.0
offset_right = 1184.0
offset_bottom = 144.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 15
theme_override_fonts/normal_font = ExtResource("6_vr6j3")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
scroll_following = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(898, 596.387)
scale = Vector2(1.24339, 1.51125)
texture = ExtResource("4_euncq")

[node name="Console" parent="." instance=ExtResource("6_t2toq")]
z_index = -5
position = Vector2(1008, 106)
scale = Vector2(4.70138, 2.90991)

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5ujvk")

[node name="Grid" type="TileMap" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(128, 240)
tile_set = SubResource("TileSet_o8gfa")
format = 2

[node name="MissileIcon" type="Sprite2D" parent="."]
position = Vector2(107, 109)
scale = Vector2(0.73, 0.765)
texture = ExtResource("10_u327o")

[node name="CureLabel" type="Label" parent="."]
offset_left = 337.0
offset_top = 39.0
offset_right = 539.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("6_vr6j3")
text = "Cure  Progress"

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="AddCamp" to="." method="_on_add_camp_pressed"]
[connection signal="pressed" from="MissileButton" to="." method="_on_missile_button_pressed"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
